--- a/main.css
+++ b/main.css
@@ -35,6 +35,10 @@ img {
 	width: 125px;
 }
 
+#comment-section h5, #testimonials h5 {
+	font-size: 16px;
+}
+
 #testimonials img {
 	width: 30px;
 }
