--- a/main.css
+++ b/main.css
@@ -43,6 +43,10 @@ img {
 	width: 30px;
 }
 
+#testimonials p:last-child {
+	text-indent: 20px;
+}
+
 .tabrow {
 	text-transform: uppercase;
 	letter-spacing: 2px;
